atngw100: use linux kernel

--- a/conf/machine/atngw100.conf
+++ b/conf/machine/atngw100.conf
@@ -10,6 +10,7 @@ PREFERRED_PROVIDER_xserver = "xserver-kdrive"
 USE_VT = "0"
 
 MACHINE_FEATURES = "kernel26 ext2 usbgadget"
+PREFERRED_PROVIDER_virtual/kernel = "linux"
 
 # used by sysvinit_2
 SERIAL_CONSOLE = "115200"
