--- a/conf/distro/openmoko.conf
+++ b/conf/distro/openmoko.conf
@@ -37,8 +37,6 @@ PREFERRED_VERSION_binutils-cross ?= "2.17.50.0.12"
 # we want the openmoko svn version of gsmd
 PREFERRED_PROVIDER_libgsmd = "libgsmd"
 
-require conf/distro/include/preferred-openmoko-versions.inc
-
 # Bleeding-edge developers should add the following line to their local.conf:
 # require conf/distro/include/moko-autorev.inc
 
@@ -62,7 +60,7 @@ PACKAGE_ARCH_pn-keymaps_fic-gta02 = "${MACHINE_CLASS}"
 PACKAGE_ARCH_pn-neod_fic-gta01 = "${MACHINE_CLASS}"
 PACKAGE_ARCH_pn-neod_fic-gta02 = "${MACHINE_CLASS}"
 
-# Select packge versions we wash to use.
+# Select package versions we want to use.
 PREFERRED_PROVIDER_gtk+ = "gtk+-fastscaling"
 PREFERRED_VERSION_gtk+-fastscaling = "2.10.14"
 
