--- a/conf/machine/mpc8323e-rdb.conf
+++ b/conf/machine/mpc8323e-rdb.conf
@@ -10,7 +10,7 @@ PREFERRED_PROVIDER_virtual/kernel = "linux"
 
 MACHINE_FEATURES = "kernel26 usbhost ext2"
 
-PREFERRED_VERSION_u-boot = "git"
+PREFERRED_VERSION_u-boot = "1.1.6"
 UBOOT_MACHINE = "MPC8323ERDB_config"
 
 EXTRA_IMAGECMD_jffs2 = "--pad --big-endian --eraseblock=0x20000"
