conf/distro/angstrom-2007.1.conf : Set gcc version to 4.1.1 for mpc8323e-rdb so that both glibc and uclibc targets build

--- a/conf/distro/angstrom-2007.1.conf
+++ b/conf/distro/angstrom-2007.1.conf
@@ -86,6 +86,12 @@ PREFERRED_VERSION_gcc-cross_dht-walnut         ?= "4.1.1"
 PREFERRED_VERSION_gcc-cross-sdk_dht-walnut     ?= "4.1.1"
 PREFERRED_VERSION_gcc-cross-initial_dht-walnut ?= "4.1.1"
 
+
+PREFERRED_VERSION_gcc_mpc8323e-rdb               ?= "4.1.1"
+PREFERRED_VERSION_gcc-cross_mpc8323e-rdb         ?= "4.1.1"
+PREFERRED_VERSION_gcc-cross-sdk_mpc8323e-rdb     ?= "4.1.1"
+PREFERRED_VERSION_gcc-cross-initial_mpc8323e-rdb ?= "4.1.1"
+
 PREFERRED_VERSION_binutils          ?= "2.18"
 PREFERRED_VERSION_binutils-cross    ?= "2.18"
 PREFERRED_VERSION_binutils-cross-sdk ?= "2.18"
