conf/machine/mpc8323e-rdb.conf : Fix a previus commit where TARGET_FPU was commented. Set TARTGET_FPU to softfloat only if distro/local.conf has not set any other value

--- a/conf/machine/mpc8323e-rdb.conf
+++ b/conf/machine/mpc8323e-rdb.conf
@@ -3,7 +3,7 @@
 #@DESCRIPTION: Machine configuration for the Freescale MPC8323E-RDB
 
 TARGET_ARCH = "powerpc"
-#TARGET_FPU = "soft"
+TARGET_FPU ?= "soft"
 PACKAGE_EXTRA_ARCHS = "all ${MACHINE} ppc ppce300c2"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux"
