--- a/conf/distro/angstrom-2008.1.conf
+++ b/conf/distro/angstrom-2008.1.conf
@@ -70,6 +70,9 @@ PREFERRED_VERSION_linux-libc-headers 	= "2.6.23"
 PREFERRED_VERSION_glibc 		= "2.6.1"
 PREFERRED_VERSION_glibc-intermediate 	= "2.6.1"
 PREFERRED_VERSION_glibc-initial 	= "2.6.1"
+PREFERRED_VERSION_uclibc ?= "0.9.29"
+PREFERRED_VERSION_uclibc-initial ?= "0.9.29"
+
 
 #Prefer a newer GTK+ and friends
 PREFERRED_VERSION_gtk+             	= "2.12.0"
