--- a/conf/machine/alix.conf
+++ b/conf/machine/alix.conf
@@ -17,7 +17,7 @@ GLIBC_EXTRA_OECONF = "--with-tls"
 
 MACHINE_FEATURES = "kernel26 usbhost ext2 pci screen alsa acpi x86"
 
-require.inc/machine/include/tune-geodelx.inc
+require conf/machine/include/tune-geodelx.inc
 
 IMAGE_FSTYPES += "tar.gz"
 
