openmoko.conf: add neo1973 feed

--- a/conf/distro/openmoko.conf
+++ b/conf/distro/openmoko.conf
@@ -24,10 +24,12 @@ PREMIRRORS = "(ftp|https?)$://.*/.*/ http://downloads.openmoko.org/sources/"
 FEED_URIS = "\
   snapshot-all##http://buildhost.openmoko.org/snapshots/2007.08/ipk/all \
   snapshot-armv4t##http://buildhost.openmoko.org/snapshots/2007.08/ipk/armv4t \
+  snapshot-neo1973##http://buildhost.openmoko.org/snapshots/2007.08/ipk/neo1973 \
   snapshot-fic-gta01##http://buildhost.openmoko.org/snapshots/2007.08/ipk/fic-gta01 \
   \
   updates-all##http://buildhost.openmoko.org/OM2007.2/tmp/deploy/glibc/ipk/all \
   updates-armv4t##http://buildhost.openmoko.org/OM2007.2/tmp/deploy/glibc/ipk/armv4t \
+  updates-neo1973##http://buildhost.openmoko.org/OM2007.2/tmp/deploy/glibc/ipk/neo1973 \
   updates-fic-gta01##http://buildhost.openmoko.org/OM2007.2/tmp/deploy/glibc/ipk/fic-gta01 "
 
 # 2.18 seems to break badly on 64-bit systems
