angstrom-2008.1.conf: sync with 2007.1, avahi and openssh-sftp-server in RRECOMMENDS

--- a/conf/distro/angstrom-2008.1.conf
+++ b/conf/distro/angstrom-2008.1.conf
@@ -61,7 +61,7 @@ PREFERRED_VERSION_linux-handhelds-2.6 ?= "2.6.21-hh17"
 
 PREFERRED_VERSION_gcc                   = "4.2.1"
 PREFERRED_VERSION_gcc-cross             = "4.2.1"
-PREFERRED_VERSION_gcc-cross-initial    	= "4.1.2"
+PREFERRED_VERSION_gcc-cross-initial            = "4.1.2"
 
 #This is unrelated to the kernel version, but userspace apps (e.g. HAL) require a recent version to build against
 PREFERRED_VERSION_linux-libc-headers 	= "2.6.23"
@@ -177,8 +177,6 @@ DISTRO_EXTRA_RDEPENDS += "\
     angstrom-version \
     ipkg ipkg-collateral \
     util-linux-mount util-linux-umount \
-    avahi-daemon \
-    avahi-autoipd \
     ${DEBUG_APPS} \
     "
 
@@ -186,4 +184,7 @@ DISTRO_EXTRA_RRECOMMENDS += " \
     kernel-module-vfat \
     kernel-module-ext2 \
     kernel-module-af-packet \
+    avahi-daemon \
+    avahi-autoipd \
+    openssh-sftp-server \
     "
