--- a/conf/distro/angstrom-2008.1.conf
+++ b/conf/distro/angstrom-2008.1.conf
@@ -59,10 +59,6 @@ PCMCIA_MANAGER = "pcmciautils"
 #Preferred version for the kernel on various machines
 PREFERRED_VERSION_linux-handhelds-2.6 ?= "2.6.21-hh18"
 
-PREFERRED_VERSION_gcc                   = "4.2.1"
-PREFERRED_VERSION_gcc-cross             = "4.2.1"
-PREFERRED_VERSION_gcc-cross-initial            = "4.1.2"
-
 #This is unrelated to the kernel version, but userspace apps (e.g. HAL) require a recent version to build against
 PREFERRED_VERSION_linux-libc-headers 	= "2.6.23"
 
@@ -90,6 +86,11 @@ PREFERRED_PROVIDER_avahi = "avahi"
 #Small machines prefer kdrive, but we might ship full Xorg in other images
 PREFERRED_PROVIDER_virtual/xserver  ?= "xserver-kdrive"
 PREFERRED_PROVIDER_xserver          ?= "xserver-kdrive"
+
+PREFERRED_VERSION_gcc               ?= "4.2.2"
+PREFERRED_VERSION_gcc-cross         ?= "4.2.2"
+PREFERRED_VERSION_gcc-cross-sdk     ?= "4.2.2"
+PREFERRED_VERSION_gcc-cross-initial ?= "4.2.2"
 
 #Loads preferred versions from files, these have weak assigments (?=), so put them at the bottom
 require conf/distro/include/preferred-gpe-versions-2.8.inc
