--- a/conf/distro/angstrom-2007.1.conf
+++ b/conf/distro/angstrom-2007.1.conf
@@ -58,6 +58,8 @@ PREFERRED_VERSION_linux-handhelds-2.6               ?= "2.6.21-hh18"
 RDEPENDS_kernel-base_hx4700 = ""
 RDEPENDS_kernel-base_htcuniversal = ""
 
+PREFERRED_PROVIDER_libgsmd = "libgsmd"
+
 # older gtk-webcore releases don't work on ARM/EABI
 # We need to switch to a fixed SRCDATE or release as soon as possible 
 PREFERRED_VERSION_osb-browser      = "0.5.0+svn${SRCDATE}"
