angstrom: only ship strace and procps for debug builds, this is a first step into removing angstrom frobbing task-base stuff (should be left to images to decide on this stuff)

--- a/conf/distro/angstrom-2007.1.conf
+++ b/conf/distro/angstrom-2007.1.conf
@@ -14,7 +14,7 @@ require conf/distro/include/sane-srcdates.inc
 require conf/distro/include/sane-srcrevs.inc
 
 #Images built can have to modes:
-# 'debug': empty rootpassword, strace and gdb included
+# 'debug': empty rootpassword, strace included
 # 'release' no root password, no strace and gdb by default
 DISTRO_TYPE ?= "debug"
 #DISTRO_TYPE = "release"
@@ -208,7 +208,7 @@ require conf/distro/include/angstrom${ARM_ABI}.inc
 
 # We want to ship extra debug utils in the rootfs when doing a debug build 
 DEBUG_APPS ?= ""
-DEBUG_APPS += '${@base_conditional("DISTRO_TYPE", "release", "", "tslib-tests tslib-calibrate gdb strace procps",d)}'
+DEBUG_APPS += '${@base_conditional("DISTRO_TYPE", "release", "", "strace procps",d)}'
 
 #this should go away soon
 EXTRA_STUFF ?= ""
