conf/distro/angstrom-2007.1.conf : Set gcc to 4.1.1 for the xilinx ml403 board

--- a/conf/distro/angstrom-2007.1.conf
+++ b/conf/distro/angstrom-2007.1.conf
@@ -84,6 +84,10 @@ PREFERRED_VERSION_gcc-cross_dht-walnut         ?= "4.1.1"
 PREFERRED_VERSION_gcc-cross-sdk_dht-walnut     ?= "4.1.1"
 PREFERRED_VERSION_gcc-cross-initial_dht-walnut ?= "4.1.1"
 
+PREFERRED_VERSION_gcc_xilinx-ml403               ?= "4.1.1"
+PREFERRED_VERSION_gcc-cross_xilinx-ml403         ?= "4.1.1"
+PREFERRED_VERSION_gcc-cross-sdk_xilinx-ml403     ?= "4.1.1"
+PREFERRED_VERSION_gcc-cross-initial_xilinx-ml403 ?= "4.1.1"
 
 PREFERRED_VERSION_gcc_mpc8323e-rdb               ?= "4.1.1"
 PREFERRED_VERSION_gcc-cross_mpc8323e-rdb         ?= "4.1.1"
