wifistix : Sync with gumstix repo.

--- a/packages/wifistix/wifistix-modules/wifistix.conf
+++ b/packages/wifistix/wifistix-modules/wifistix.conf
@@ -1,4 +1,4 @@
-install pcmcia /sbin/modprobe --ignore-install pcmcia && modprobe pxa2xx-cs
-
 alias wlan0 mcf25
+
+install cfio /sbin/modprobe proc-gpio && echo GPIO out set > /proc/gpio/GPIO80 && /sbin/pccardctl eject && /sbin/modprobe --ignore-install cfio && /sbin/pccardctl insert && modprobe pxa2xx-cs
 
