linux-rp: Depends on bc during buildtime for collie. * Don't bother to create bc-natibe though, just add it to global ASSUME_PROVIDED list.

--- a/conf/bitbake.conf
+++ b/conf/bitbake.conf
@@ -108,6 +108,7 @@ DATETIME = "${DATE}${TIME}"
 # python-native should be here but python relies on building 
 # its own in staging
 ASSUME_PROVIDED = "\
+    bc-native \
     bzip2-native \
     cvs-native \
     diffstat-native \
