fic-gta02: ship Xfbdev as well

--- a/conf/machine/fic-gta02.conf
+++ b/conf/machine/fic-gta02.conf
@@ -16,7 +16,7 @@ MACHINE_DISPLAY_WIDTH_PIXELS = "480"
 MACHINE_DISPLAY_HEIGHT_PIXELS = "640"
 MACHINE_DISPLAY_ORIENTATION = "0"
 MACHINE_DISPLAY_PPI = "285"
-XSERVER = "xserver-kdrive-glamo"
+XSERVER = "xserver-kdrive-glamo xserver-kdrive-fbdev"
 
 # package machine specific modules
 MACHINE_EXTRA_RRECOMMENDS = "\
