--- a/conf/distro/slugos.conf
+++ b/conf/distro/slugos.conf
@@ -19,3 +19,4 @@ require conf/distro/include/slugos.inc
 PREFERRED_PROVIDER_virtual/libiconv ?= "glibc"
 PREFERRED_PROVIDER_virtual/libintl ?= "glibc"
 PREFERRED_PROVIDER_virtual/libc ?= "glibc"
+PREFERRED_PROVIDER_virtual/${TARGET_PREFIX}libc-initial ?= "glibc-initial"
