angstrom 2008: prefer gcc 4.2.1 for avr32

--- a/conf/distro/angstrom-2008.1.conf
+++ b/conf/distro/angstrom-2008.1.conf
@@ -70,13 +70,18 @@ PREFERRED_VERSION_uclibc ?= "0.9.29"
 PREFERRED_VERSION_uclibc-initial ?= "0.9.29"
 
 
-#avr32 only has patches for binutils 2.17 and gcc 4.1.2 in OE
+#avr32 only has patches for binutils 2.17 and gcc 4.2.1 in OE
 PREFERRED_VERSION_binutils_avr32 = "2.17"
 PREFERRED_VERSION_binutils-cross_avr32 = "2.17"
 PREFERRED_VERSION_binutils-cross-sdk_avr32 = "2.17"
 #there's is no avr32 patch for 0.9.29
 PREFERRED_VERSION_uclibc_avr32 = "0.9.28"
 PREFERRED_VERSION_uclibc-initial_avr32 = "0.9.28"
+PREFERRED_VERSION_gcc_avr32               ?= "4.2.1"
+PREFERRED_VERSION_gcc-cross_avr32         ?= "4.2.1"
+PREFERRED_VERSION_gcc-cross-sdk_avr32     ?= "4.2.1"
+PREFERRED_VERSION_gcc-cross-initial_avr32 ?= "4.2.1"
+
 
 #Prefer a newer GTK+ and friends
 PREFERRED_VERSION_gtk+             	= "2.12.0"
