angstrom: add vars for feed config package

--- a/conf/distro/angstrom-2007.1.conf
+++ b/conf/distro/angstrom-2007.1.conf
@@ -29,6 +29,7 @@ DISTRO_TYPE ?= "debug"
 # Also, it appears that no locales fit in 16Mb for now. "C" locale rules!
 IMAGE_LINGUAS = '${@base_less_or_equal("ROOT_FLASH_SIZE", "16", "", "en-gb", d)}'
 
+# These will be put under package management soon
 FEED_URIS += " \
 		no-arch##${ANGSTROM_URI}/unstable/feed/all \
 		base##${ANGSTROM_URI}/unstable/feed/${FEED_ARCH}/base \
@@ -40,6 +41,11 @@ FEED_URIS += " \
 #        base##${ANGSTROM_URI}/releases/${DISTRO_VERSION}/feed/${FEED_ARCH}/base \
 #        ${MACHINE}##${ANGSTROM_URI}/releases/${DISTRO_VERSION}/feed/${FEED_ARCH}/machine/${MACHINE} \
 #        updates##${ANGSTROM_URI}/releases/${DISTRO_VERSION}/feed/${FEED_ARCH}/updates"
+
+
+# set feed path variables
+FEED_BASEPATH = "feeds/2007/${ANGSTROM_PKG_FORMAT}/${ANGSTROM_MODE}/"
+
 
 #The angstrom-mirrors.bbclass should have everything, but we can use this as a fallback
 CVS_TARBALL_STASH ?= "\
