--- a/conf/distro/angstrom-2008.1.conf
+++ b/conf/distro/angstrom-2008.1.conf
@@ -44,6 +44,10 @@ FEED_URIS += " \
 		gstreamer##${ANGSTROM_URI}/unstable/feed/${FEED_ARCH}/gstreamer \
 		${MACHINE}##${ANGSTROM_URI}/unstable/feed/${FEED_ARCH}/machine/${MACHINE}"
 
+# set feed path variables
+FEED_BASEPATH = "feeds/2008/${ANGSTROM_PKG_FORMAT}/${ANGSTROM_MODE}/"
+
+
 #The angstrom-mirrors.bbclass should have everything, but we can use this as a fallback
 CVS_TARBALL_STASH ?= "\
 		     http://www.angstrom-distribution.org/unstable/sources/ \
