--- a/conf/distro/angstrom-2007.1.conf
+++ b/conf/distro/angstrom-2007.1.conf
@@ -55,6 +55,7 @@ PCMCIA_MANAGER = "pcmciautils"
 
 #Preferred version for the kernel on various machines
 PREFERRED_VERSION_linux-handhelds-2.6               ?= "2.6.21-hh18"
+PREFERRED_VERSION_linux-ixp4xx                      ?= "2.6.21.6+svnr${SRCREV}"
 RDEPENDS_kernel-base_hx4700 = ""
 RDEPENDS_kernel-base_htcuniversal = ""
 
