angstrom 2007: put feeds under package management

--- a/conf/distro/angstrom-2007.1.conf
+++ b/conf/distro/angstrom-2007.1.conf
@@ -30,14 +30,14 @@ DISTRO_TYPE ?= "debug"
 IMAGE_LINGUAS = '${@base_less_or_equal("ROOT_FLASH_SIZE", "16", "", "en-gb", d)}'
 
 # These will be put under package management soon
-FEED_URIS += " \
-		no-arch##${ANGSTROM_URI}/unstable/feed/all \
-		base##${ANGSTROM_URI}/unstable/feed/${FEED_ARCH}/base \
-		perl##${ANGSTROM_URI}/unstable/feed/${FEED_ARCH}/perl \
-		python##${ANGSTROM_URI}/unstable/feed/${FEED_ARCH}/python \
-		debug##${ANGSTROM_URI}/unstable/feed/${FEED_ARCH}/debug \
-		gstreamer##${ANGSTROM_URI}/unstable/feed/${FEED_ARCH}/gstreamer \
-		${MACHINE}##${ANGSTROM_URI}/unstable/feed/${FEED_ARCH}/machine/${MACHINE}"
+#FEED_URIS += " \
+#		no-arch##${ANGSTROM_URI}/unstable/feed/all \
+#		base##${ANGSTROM_URI}/unstable/feed/${FEED_ARCH}/base \
+#		perl##${ANGSTROM_URI}/unstable/feed/${FEED_ARCH}/perl \
+#		python##${ANGSTROM_URI}/unstable/feed/${FEED_ARCH}/python \
+#		debug##${ANGSTROM_URI}/unstable/feed/${FEED_ARCH}/debug \
+#		gstreamer##${ANGSTROM_URI}/unstable/feed/${FEED_ARCH}/gstreamer \
+#		${MACHINE}##${ANGSTROM_URI}/unstable/feed/${FEED_ARCH}/machine/${MACHINE}"
 #        base##${ANGSTROM_URI}/releases/${DISTRO_VERSION}/feed/${FEED_ARCH}/base \
 #        ${MACHINE}##${ANGSTROM_URI}/releases/${DISTRO_VERSION}/feed/${FEED_ARCH}/machine/${MACHINE} \
 #        updates##${ANGSTROM_URI}/releases/${DISTRO_VERSION}/feed/${FEED_ARCH}/updates"
@@ -237,7 +237,7 @@ DISTRO_EXTRA_RDEPENDS += "\
     update-modules \
     ${@base_contains("MACHINE_FEATURES", "screen", "psplash", "",d)} \   
     angstrom-version \
-    ipkg ipkg-collateral \
+    ipkg ipkg-collateral angstrom-feed-configs \
     util-linux-mount util-linux-umount \
     ${EXTRA_STUFF} \
     ${DEBUG_APPS} \
