--- a/conf/machine/h4000.conf
+++ b/conf/machine/h4000.conf
@@ -26,8 +26,9 @@ PREFERRED_PROVIDER_xserver = "xserver-kdrive"
 
 MACHINE_EXTRA_RDEPENDS = "tiinit acx-firmware ${PCMCIA_MANAGER}"
 MACHINE_EXTRA_RRECOMMENDS = "kernel-module-snd-h4000-audio \
-                             kernel-module-h4000-pcmcia \
                              kernel-module-i2c-pxa \
+			     kernel-module-h4000-bt \
+                             kernel-module-h4000-pcmcia \
                              kernel-module-acx \
                             "
 
