--- a/conf/machine/h2200.conf
+++ b/conf/machine/h2200.conf
@@ -27,12 +27,19 @@ PREFERRED_PROVIDER_xserver = "xserver-kdrive"
 PREFERRED_PROVIDER_virtual/kernel = "linux-handhelds-2.6"
 
 MACHINE_EXTRA_RDEPENDS = "h2200-bootloader udev-hostap-cs-vcc-workaround"
+MACHINE_EXTRA_RRECOMMENDS = "\
+    kernel-module-snd-h2200-audio \
+    kernel-module-i2c-pxa \
+    "
+
 EXTRA_IMAGECMD_jffs2 = "--pad --eraseblock=0x4000"
 
 #
 # Modules autoload and other boot properties
 #
 module_autoload_snd-pcm-oss 	= "snd-pcm-oss"
+module_autoload_snd-mixer-oss = "snd-mixer-oss"
+module_autoload_snd-h2000-audio = "snd-h2000-audio"
 
 SERIAL_CONSOLE = "115200 ttyS0 vt100"
 USE_VT = "0"
