PocketPC machines: Remove non machine-specific modules.

--- a/conf/machine/aximx50.conf
+++ b/conf/machine/aximx50.conf
@@ -32,9 +32,7 @@ PREFERRED_PROVIDER_xserver = "xserver-kdrive"
 PREFERRED_VERSION_orinoco-modules = "0.15rc1"
 
 MACHINE_EXTRA_RDEPENDS = "tiinit acx-firmware"
-MACHINE_EXTRA_RRECOMMENDS = "kernel-module-nls-cp437 \
-				kernel-module-nls-iso8859-1 \
-				kernel-module-nls-utf8 \
+MACHINE_EXTRA_RRECOMMENDS = "\
 				kernel-module-i2c-pxa"
 
 #
