--- a/conf/machine/h3600.conf
+++ b/conf/machine/h3600.conf
@@ -27,7 +27,7 @@ PCMCIA_MANAGER = "pcmciautils"
 PREFERRED_PROVIDER_xserver = "xserver-kdrive"
 
 MACHINE_EXTRA_RDEPENDS = "ipaq-boot-params"
-MACHINE_EXTRA_RRECOMMENDS = "kernel-module-nls-cp437 \
+MACHINE_EXTRA_RRECOMMENDS = "\
                              kernel-module-micro"
 
 EXTRA_IMAGECMD_jffs2 = "-e 0x40000 -p ; echo '${IMAGE_NAME}  ${IMAGE_NAME}.rootfs.jffs2 - root' >> ${DEPLOY_DIR_IMAGE}/reflash.ctl"
