h4000.conf: Use canonical module names in autoloads.

--- a/conf/machine/h4000.conf
+++ b/conf/machine/h4000.conf
@@ -37,7 +37,7 @@ MACHINE_EXTRA_RRECOMMENDS = "kernel-module-snd-h4000-audio \
 #
 module_autoload_snd-pcm-oss = "snd-pcm-oss"
 module_autoload_snd-mixer-oss = "snd-mixer-oss"
-module_autoload_snd-h4000_audio = "snd-h4000_audio"
+module_autoload_snd-h4000-audio = "snd-h4000-audio"
 module_autoload_g_ether = "g_ether"
 module_conf_acx = "blacklist acx"
 
