various files: update my email address and website address

--- a/conf/distro/angstrom-2008.1.conf
+++ b/conf/distro/angstrom-2008.1.conf
@@ -2,7 +2,7 @@
 #@TYPE: Distribution
 #@NAME: Angstrom <http://www.angstrom-distribution.org>
 #@DESCRIPTION: The Linux Distribution for Kernel 2.6 based devices
-#@MAINTAINER: Koen Kooi <koen@dominion.kabel.utwente.nl>
+#@MAINTAINER: Koen Kooi <koen@openembedded.org>
 #@MAINTAINER: Michael 'Mickey' Lauer <mickey@Vanille-media.de>
 #@--------------------------------------------------------------------
 
