--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -34,6 +34,11 @@ TARGET_CC_ARCH[doc] = "FIXME"
 TARGET_FPU[doc] = "Floating point option (mostly for FPU-less systems), can be 'soft' or empty \
 for hardware floating point instructions."
 
+ASSUME_PROVIDED[doc] = "List of packages (recipes actually) which are assumed to be implicitly available.\
+ These packages won't be built by bitbake."
+ASSUME_SHLIBS[doc] = "List of shlib:package[_version] mappings. Useful for lib packages in ASSUME_PROVIDED,\
+ for which automatic shlib dependency tracking doesn't work."
+
 PACKAGE_ARCH[doc] = 'The architecture needed for using a resulting package. If you have \
 machine dependant configuration options in your bitbake file add a \
 PACKAGE_ARCH  = "${MACHINE_ARCH}" to the file.'
