angstrom: bump to RC1

--- a/conf/distro/angstrom-2007.1.conf
+++ b/conf/distro/angstrom-2007.1.conf
@@ -6,9 +6,9 @@
 #@MAINTAINER: Michael 'Mickey' Lauer <mickey@Vanille.de>
 #@--------------------------------------------------------------------
 
-#DISTRO_VERSION = "2007.9"
-DISTRO_VERSION = "2007.9-test-${DATE}"
-DISTRO_REVISION = "47"
+# The release will the 2007.12
+DISTRO_VERSION = "2007.11RC1"
+DISTRO_REVISION = "48"
 
 require conf/distro/include/sane-srcdates.inc
 require conf/distro/include/sane-srcrevs.inc
