unslung.conf: Add some more preferred providers to stop external-toolchain interfering.

--- a/conf/distro/unslung.conf
+++ b/conf/distro/unslung.conf
@@ -45,7 +45,9 @@ PREFERRED_PROVIDERS += " virtual/${TARGET_PREFIX}gcc-initial:gcc-cross-initial"
 PREFERRED_PROVIDERS += " virtual/${TARGET_PREFIX}gcc:gcc-cross"
 PREFERRED_PROVIDERS += " virtual/${TARGET_PREFIX}g++:gcc-cross"
 PREFERRED_PROVIDERS += " virtual/${TARGET_PREFIX}libc-for-gcc:glibc"
+PREFERRED_PROVIDERS += " virtual/${TARGET_PREFIX}binutils:binutils-cross"
 PREFERRED_PROVIDERS += " virtual/libc:glibc"
+PREFERRED_PROVIDERS += " linux-libc-headers:linux-libc-headers"
 
 PREFERRED_PROVIDER_libc6-unslung = "glibc"
 
