task-base: Introduce "vfat" feature to get VFAT support. * A COMBINED_FEATURE, machine and distro both must have it set for support to appear in images. * For now, deploy just kernel modules. Necessity of dosfstools requires more thought (and unlikely - vfat cannot be rootfs, so there's nothing to test/recover as emergency measure, and users can install the tools during normal operation).

--- a/conf/bitbake.conf
+++ b/conf/bitbake.conf
@@ -588,6 +588,7 @@ COMBINED_FEATURES = "\
     ${@base_both_contain("DISTRO_FEATURES", "MACHINE_FEATURES", "alsa", d)} \
     ${@base_both_contain("DISTRO_FEATURES", "MACHINE_FEATURES", "bluetooth", d)} \
     ${@base_both_contain("DISTRO_FEATURES", "MACHINE_FEATURES", "ext2", d)} \
+    ${@base_both_contain("DISTRO_FEATURES", "MACHINE_FEATURES", "vfat", d)} \
     ${@base_both_contain("DISTRO_FEATURES", "MACHINE_FEATURES", "irda", d)} \
     ${@base_both_contain("DISTRO_FEATURES", "MACHINE_FEATURES", "pcmcia", d)} \
     ${@base_both_contain("DISTRO_FEATURES", "MACHINE_FEATURES", "pci", d)} \
