PDA-like machines with card slots: Enable "vfat" feature. * FAT-formatted cards are commodity, it's expectable them to be supported OOB.

--- a/conf/machine/nokia770.conf
+++ b/conf/machine/nokia770.conf
@@ -30,7 +30,7 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-nokia800"
 #use this if you are using the nokia initfs
 ROOTFS_POSTPROCESS_COMMAND += " remove_init_link; "
 
-MACHINE_FEATURES = "kernel26 apm alsa bluetooth usbgadget usbhost screen"
+MACHINE_FEATURES = "kernel26 apm alsa bluetooth usbgadget usbhost screen vfat"
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "nokia770-init"
 
 # build tools
