--- a/conf/machine/h2200.conf
+++ b/conf/machine/h2200.conf
@@ -17,7 +17,7 @@ ROOT_FLASH_SIZE = "32"
 MACHINE_GUI_CLASS = "smallscreen"
 MACHINE_DISPLAY_WIDTH_PIXELS = "240"
 MACHINE_DISPLAY_HEIGHT_PIXELS = "320"
-MACHINE_FEATURES = "kernel26 touchscreen apm alsa pcmcia bluetooth irda usbgadget screen"
+MACHINE_FEATURES = "kernel26 touchscreen apm alsa pcmcia bluetooth irda usbgadget screen vfat"
 
 #
 # Software/packages selection
