--- a/conf/machine/magician.conf
+++ b/conf/machine/magician.conf
@@ -21,7 +21,7 @@ MACHINE_DISPLAY_WIDTH_PIXELS = "240"
 MACHINE_DISPLAY_HEIGHT_PIXELS = "320"
 MACHINE_DISPLAY_ORIENTATION = "0"
 MACHINE_DISPLAY_PPI = "142"
-MACHINE_FEATURES = "alsa apm bluetooth irda kernel26 phone screen touchscreen usbgadget usbhost"
+MACHINE_FEATURES = "alsa apm bluetooth irda kernel26 phone screen touchscreen usbgadget usbhost vfat"
 MACHINE_FEATURES += "iwmmxt"
 
 #
