--- a/conf/machine/nokia800.conf
+++ b/conf/machine/nokia800.conf
@@ -24,7 +24,7 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-nokia800"
 #use this if you are using the nokia initfs
 ROOTFS_POSTPROCESS_COMMAND += " remove_init_link; "
 
-MACHINE_FEATURES = "kernel26 apm alsa bluetooth usbgadget usbhost"
+MACHINE_FEATURES = "kernel26 apm alsa bluetooth usbgadget usbhost vfat"
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "nokia770-init"
 
 # build tools
