fic-gta01.conf, fic-gta02.conf: These want vfat feature too of course. * Omission from vfat upgrade commit.

--- a/conf/machine/fic-gta01.conf
+++ b/conf/machine/fic-gta01.conf
@@ -11,7 +11,7 @@ PACKAGE_EXTRA_ARCHS = "armv4t ${MACHINE_CLASS}"
 PREFERRED_PROVIDER_virtual/kernel = "linux-openmoko"
 UBOOT_ENTRYPOINT = "30008000"
 
-MACHINE_FEATURES = "kernel26 apm alsa bluetooth gps usbgadget usbhost phone"
+MACHINE_FEATURES = "kernel26 apm alsa bluetooth gps usbgadget usbhost phone vfat"
 MACHINE_DISPLAY_WIDTH_PIXELS = "480"
 MACHINE_DISPLAY_HEIGHT_PIXELS = "640"
 MACHINE_DISPLAY_ORIENTATION = "0"
