--- a/conf/distro/angstrom-2008.1.conf
+++ b/conf/distro/angstrom-2008.1.conf
@@ -187,3 +187,6 @@ DISTRO_EXTRA_RRECOMMENDS += " \
     avahi-autoipd \
     openssh-sftp-server \
     "
+
+SEPPUKU_NEWREPORT    = "http://bugs.openembedded.org/post_bug.cgi?bug_file_loc=http%3A%2F%2F&version=Angstrom%202008.x&priority=P2&bug_severity=normal&op_sys=Linux&rep_platform=Other&"
+
