h2200: promote suspend/resume package to task-boot

--- a/conf/machine/h2200.conf
+++ b/conf/machine/h2200.conf
@@ -26,7 +26,8 @@ PCMCIA_MANAGER = "pcmciautils"
 PREFERRED_PROVIDER_xserver = "xserver-kdrive"
 PREFERRED_PROVIDER_virtual/kernel = "linux-handhelds-2.6"
 
-MACHINE_EXTRA_RDEPENDS = "h2200-bootloader udev-hostap-cs-vcc-workaround"
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS = " h2200-bootloader "
+MACHINE_EXTRA_RDEPENDS = " udev-hostap-cs-vcc-workaround "
 MACHINE_EXTRA_RRECOMMENDS = "\
     kernel-module-snd-h2200-audio \
     kernel-module-i2c-pxa \
