--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -103,6 +103,9 @@ PCMCIA_MANAGER[doc] = "Specify which package(s) to install to handle PCMCIA slot
 
 SYSVINIT_ENABLED_GETTYS[doc] = "Specify which VTs should be running a getty, the default is 1"
 
+FEED_URIS[doc] = "List of ipkg feed records to put into generated image."
+FEED_DEPLOYDIR_BASE_URI[doc] = "Allow to serve ipk deploy dir as an adhoc feed (bogofeed). Set to base URL of the dir as exported by HTTP. Set of adhoc feed configs will be generated in image."
+
 # insane bbclass
 QA_LOG[doc] = "Enable logging of QA errors to log.qa_package. Default is not to log."
 
