--- a/conf/machine/h5000.conf
+++ b/conf/machine/h5000.conf
@@ -6,7 +6,7 @@
 # Hardware-based properties
 #
 TARGET_ARCH = "arm"
-PACKAGE_EXTRA_ARCHS = "armv4 armv4t armv5e armv5te  h5xxx"
+PACKAGE_EXTRA_ARCHS = "armv4 armv4t armv5e armv5te"
 
 require conf/machine/include/tune-xscale.inc
 
