h5000.conf: Add standard sound module autoloads. * Note device-specific autoloads are still lacking.

--- a/conf/machine/h5000.conf
+++ b/conf/machine/h5000.conf
@@ -31,5 +31,9 @@ MACHINE_EXTRA_RRECOMMENDS = " kernel-module-h5400-lcd \
 #
 # Modules autoload and other boot properties
 #
+module_autoload_snd-pcm-oss = "snd-pcm-oss"
+module_autoload_snd-mixer-oss = "snd-mixer-oss"
+module_autoload_g_ether = "g_ether"
+
 SERIAL_CONSOLE = "115200 ttyS0 vt100"
 USE_VT = "0"
