hx4700.conf: Someone broke hx4700. * Was fun to debug.

--- a/conf/machine/hx4700.conf
+++ b/conf/machine/hx4700.conf
@@ -21,7 +21,7 @@ MACHINE_DISPLAY_WIDTH_PIXELS = "480"
 MACHINE_DISPLAY_HEIGHT_PIXELS = "640"
 MACHINE_DISPLAY_ORIENTATION = "0"
 MACHINE_DISPLAY_PPI = "200"
-MACHINE_FEATURES = "alsa apm bluetooth irda pcmcia screen touchscreen usbgadget wifi vfat"
+MACHINE_FEATURES = "alsa apm bluetooth irda kernel26 pcmcia screen touchscreen usbgadget wifi vfat"
 MACHINE_FEATURES += "iwmmxt"
 
 #
