--- a/conf/machine/h5000.conf
+++ b/conf/machine/h5000.conf
@@ -26,13 +26,15 @@ EXTRA_IMAGECMD_jffs2 = "-e 0x40000 -p ; echo '${IMAGE_NAME}  ${IMAGE_NAME}.rootf
 
 MACHINE_EXTRA_RDEPENDS = "kernel ipaq-boot-params"
 MACHINE_EXTRA_RRECOMMENDS = " kernel-module-h5400-lcd \
-			      kernel-module-h5400-battery"
+			      kernel-module-h5400-battery \
+			      kernel-module-snd-soc-h5000"
 
 #
 # Modules autoload and other boot properties
 #
 module_autoload_snd-pcm-oss = "snd-pcm-oss"
 module_autoload_snd-mixer-oss = "snd-mixer-oss"
+module_autoload_snd-soc-h5000 = "snd-soc-h5000"
 module_autoload_g_ether = "g_ether"
 
 SERIAL_CONSOLE = "115200 ttyS0 vt100"
