--- a/conf/distro/angstrom-2007.1.conf
+++ b/conf/distro/angstrom-2007.1.conf
@@ -6,9 +6,8 @@
 #@MAINTAINER: Michael 'Mickey' Lauer <mickey@Vanille.de>
 #@--------------------------------------------------------------------
 
-# The release will the 2007.12
-DISTRO_VERSION = "2007.11RC3"
-DISTRO_REVISION = "51"
+DISTRO_VERSION = "2007.12"
+DISTRO_REVISION = "52"
 
 require conf/distro/include/sane-srcdates.inc
 require conf/distro/include/sane-srcrevs.inc
@@ -16,8 +15,8 @@ require conf/distro/include/sane-srcrevs.inc
 #Images built can have to modes:
 # 'debug': empty rootpassword, strace included
 # 'release' no root password, no strace and gdb by default
-DISTRO_TYPE ?= "debug"
-#DISTRO_TYPE = "release"
+#DISTRO_TYPE ?= "debug"
+DISTRO_TYPE = "release"
 
 # Ship just basic locale by default. Locales are big (~1Mb uncompr.), so
 # shipping some adhoc subset will be still useless and size burden for
