angstrom 2007: add warning and point to branch:  If you want to use the angstrom 2007.12 release or if  you want to base you distro on angstrom 2007, switch to  the org.openembedded.angstrom-2007.12-stable branch  THIS FILE WILL GO AWAY IN JANUARY 2008!!

--- a/conf/distro/angstrom-2007.1.conf
+++ b/conf/distro/angstrom-2007.1.conf
@@ -6,7 +6,11 @@
 #@MAINTAINER: Michael 'Mickey' Lauer <mickey@Vanille.de>
 #@--------------------------------------------------------------------
 
-# The release will the 2007.12
+# If you want to use the angstrom 2007.12 release or if
+# you want to base you distro on angstrom 2007, switch to
+# the org.openembedded.angstrom-2007.12-stable branch
+# THIS FILE WILL GO AWAY IN JANUARY 2008!!
+
 DISTRO_VERSION = "2007.11RC3"
 DISTRO_REVISION = "51"
 
